#60 fix overlap of icon with buttons for mcq

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -156,10 +156,10 @@
     background-color:@esdc-int-hover-color;
 }
 
-.buttons .buttons-marking-icon {
+/*.buttons .buttons-marking-icon {
     left:unset !important;
     right:25px;
-}
+} removed as per issue #60*/ 
 
 // ====================================================================
 //
